--- a/src/05-member/style/SignUp.scss
+++ b/src/05-member/style/SignUp.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
-$s-bgcYellow: url(./img/bgc_yellow.jpg);
-$s-bgcBlue: url(./img/bgc_blue.jpg);
+$s-bgcYellow: url(../../../public/05-member/bgc_yellow.jpg);
+$s-bgcBlue: url(../../../public/05-member/bgc_blue.jpg);
 $s-bgc: #fff;
 $s-font: #5e5e5e;
 $s-font-main: #2b325c;
