forgot_resetPass/Runman

--- a/src/05-member/style/SignUp.scss
+++ b/src/05-member/style/SignUp.scss
@@ -14,7 +14,7 @@ $s-main-b: #113f75;
   font-family: "Open Sans", sans-serif;
 }
 
-.s-body {
+.s-body-signup {
   display: flex;
   justify-content: center;
   align-items: center;
