--- a/src/05-member/style/ResetPass.scss
+++ b/src/05-member/style/ResetPass.scss
@@ -10,7 +10,7 @@ $s-main-b: #113f75;
 //   font-family: 'Open Sans', sans-serif;
 // }
 
-.s-body {
+.s-body-resetpass {
   display: flex;
   justify-content: center;
   align-items: center;
