--- a/src/05-member/style/SignUp.scss
+++ b/src/05-member/style/SignUp.scss
@@ -257,7 +257,7 @@ $s-main-b: #113f75;
   }
 }
 
-.s-body.active {
+.s-body-signup.active {
   background: $s-bgcBlue center center no-repeat;
   background-size: cover;
 
