--- a/src/00-homepage/styles/YellowWave.scss
+++ b/src/00-homepage/styles/YellowWave.scss
@@ -6,7 +6,7 @@ $min-width: 390px;
 $wave-height: 40px;
 
 .y-wave-section {
-    position: relative;
+    // position: relative;
     width: 100%;
     height: 100px;
     // background-color: transparent; 
@@ -17,7 +17,7 @@ $wave-height: 40px;
         background-color: $main-yellow;
     }
     .y-wave-wrap {
-        position: absolute;
+        // position: absolute;
         top: $wave-height;
         width: 100%;
         height: 100px;
