--- a/src/05-member/style/SignUp.scss
+++ b/src/05-member/style/SignUp.scss
@@ -25,7 +25,7 @@ $s-main-b: #113f75;
   .container {
     position: relative;
     width: 800px;
-    height: 500px;
+    height: 550px;
     margin: 20px;
     /* background: #ff0; */
 
@@ -33,7 +33,7 @@ $s-main-b: #113f75;
 
     .blueBg {
       position: absolute;
-      top: 40px;
+      top: 65px;
       width: 100%;
       height: 420px;
       background: rgba(255, 255, 255, 0.9);
@@ -107,6 +107,7 @@ $s-main-b: #113f75;
           flex-direction: column;
           justify-content: center;
           align-items: center;
+          // border: 1px solid orange;
 
           h2 {
             font-size: 30px;
@@ -125,7 +126,7 @@ $s-main-b: #113f75;
 
           input {
             width: 100%;
-            margin-bottom: 20px;
+            // margin-bottom: 20px;
             padding: 10px;
             outline: none;
             font-size: 16px;
@@ -146,6 +147,7 @@ $s-main-b: #113f75;
             box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
             border: none;
             color: $s-bgc;
+            margin-bottom: 15px;
           }
 
           .forgot {
@@ -155,6 +157,17 @@ $s-main-b: #113f75;
 
           p {
             color: $s-font;
+          }
+
+          .errorMg {
+            // border: 1px solid green;
+            font-size: 15px;
+            margin-bottom: 15px;
+            display: flex;
+            flex-direction: row;
+            justify-content: left;
+            width: 100%;
+            height: 15px;
           }
 
           .gmailBtn {
@@ -207,12 +220,15 @@ $s-main-b: #113f75;
       .signupForm {
         left: 100%;
         transition-delay: 0s;
+        // border: 1px solid pink;
+        // position: relative;
 
         input[type="submit"] {
           background: $s-main-b;
           box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
           border: none;
           color: $s-bgc;
+          margin-bottom: 15px;
         }
       }
     }
@@ -280,6 +296,7 @@ $s-main-b: #113f75;
         box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
         border: none;
         color: $s-bgc;
+        margin-bottom: 15px;
       }
     }
   }
