--- a/src/05-member/style/ForgotPass.scss
+++ b/src/05-member/style/ForgotPass.scss
@@ -21,7 +21,7 @@ $s-main-b: #113f75;
   .container {
     position: relative;
     width: 400px;
-    height: 380px;
+    height: 400px;
     margin: 20px;
     /* background: #ff0; */
 
@@ -68,7 +68,7 @@ $s-main-b: #113f75;
 
         input {
           width: 100%;
-          margin-bottom: 20px;
+          // margin-bottom: 20px;
           padding: 10px;
           outline: none;
           font-size: 16px;
@@ -89,6 +89,24 @@ $s-main-b: #113f75;
           box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
           border: none;
           color: #fff;
+        }
+
+        .errorMg {
+          // border: 1px solid green;
+          font-size: 14px;
+          margin-bottom: 15px;
+          display: flex;
+          flex-direction: row;
+          justify-content: left;
+          width: 100%;
+          height: 15px;
+        }
+
+        label {
+          font-size: 15px;
+          width: 100%;
+          margin-bottom: 5px;
+          font-weight: 600;
         }
       }
     }
