--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -11,7 +11,7 @@ $font-family: Arial, Helvetica, sans-serif;
 }
 
 .y-btn-border {
-    background-color: white;
+    // background-color: white;
     width: 150px;
     .y-menu-border {
         padding: 15px;
