--- a/src/00-homepage/styles/Homepage.scss
+++ b/src/00-homepage/styles/Homepage.scss
@@ -17,12 +17,14 @@ $section-padding: 40px;
 
 .y-index-container {
     min-width: $min-width;
+    background-color: #fff;
 }
 
 .y-index-top {
     width: 100%;
     // height: 500px;
-    background-color: #ccc;
+    background-color:
+    $main-yellow;
 }
 
 .y-section {
@@ -32,12 +34,11 @@ $section-padding: 40px;
 
 .y-section-nav {
     position: fixed;
+    z-index: 999;
     top: 0;
-    height: 120px;
+    height: 90px;
     padding: 0 $section-padding;
     overflow: hidden;
-    background: {
-    }
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -76,11 +77,19 @@ $section-padding: 40px;
 
 }
 
+.y-section-news {
+    overflow: hidden;
+    height: 20px;
+    margin-top: 120px;
+    background-color: #FBFBF2;
+}
 .y-section-carousel {
     height: 300px;
-    margin-top: 120px;
-    background-color: #5E5E5E;
+    background-color: $main-yellow;
     // offset-position: 30px 0;
 }
 
-
+.y-section-merch {
+    height: 500px;
+    background-color: $main-yellow;
+}
