--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
-// 全站都可以用的樣式
+// 共用變數、元件樣式
 @import "./styles/global.scss";
 @import "./styles/Menu.scss";
+
+// 各主頁scss連結
+@import "./00-homepage/styles/Homepage.scss";
