--- a/src/components/Modal.scss
+++ b/src/components/Modal.scss
@@ -7,10 +7,11 @@
   background-color: rgba(83,83,83,75%);
 
   .modal-dialog {
-    border: 1px solid green;
+    // border: 1px solid green;
     width: 500px;
     height: 200px;
     background-color: #fff;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
     .modal-content {
       border: 3px solid #2B325C;
       height: 100%;
