--- a/src/05-member/style/SignUp.scss
+++ b/src/05-member/style/SignUp.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 $s-bgcYellow: url(../../../public/05-member/bgc_yellow.jpg);
 $s-bgcBlue: url(../../../public/05-member/bgc_blue.jpg);
 $s-bgc: #fff;
@@ -11,7 +11,7 @@ $s-main-b: #113f75;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .s-body-signup {
@@ -133,7 +133,7 @@ $s-main-b: #113f75;
             border: 1px solid #333;
           }
 
-          input[type="submit"] {
+          input[type='submit'] {
             /* border: none; */
             /* color: #fff; */
             font-weight: 600;
@@ -230,7 +230,7 @@ $s-main-b: #113f75;
         // border: 1px solid pink;
         // position: relative;
 
-        input[type="submit"] {
+        input[type='submit'] {
           background: $s-main-b;
           box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
           border: none;
@@ -298,7 +298,7 @@ $s-main-b: #113f75;
       left: 0;
       transition-delay: 0.25s;
 
-      input[type="submit"] {
+      input[type='submit'] {
         background: $s-main-b;
         box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
         border: none;
