--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -8,6 +8,7 @@ $btn-shadow-sm: 2px 2px $main-blue;
 $light-box-shadow: rgba(53, 53, 53, 0.75);
 
 $min-width: 390px;
+$min-height: 400px;
 $wave-height: 40px;
 
 $font-family: Arial, Helvetica, sans-serif;
@@ -115,13 +116,14 @@ $border-radius-button: 8px;
 }
 
 .y-btn-wrap-opened {
+    height: $min-height;
+
     .y-menu-border {
         width: 100%;
-        height: 100vh;
-        min-height: 300px;
+        height: 100%;
         display: flex;
         justify-content: center;
-        align-items: center;
+        // align-items: center;
         position: relative;
         
         .y-menu-top {
@@ -146,6 +148,7 @@ $border-radius-button: 8px;
         }
 
         .y-menu-bottom {
+            display: flex;
             .y-menu-search {
 
             }
@@ -157,14 +160,18 @@ $border-radius-button: 8px;
             }
             
             .y-social-media {
-
-            }
-            .y-social-media-wrap{
-
-                img {
-                    
+                display: flex;
+                justify-content: space-between;
+                .y-social-media-wrap{
+                    width: 24px;
+                    aspect-ratio: 1/1;
+                    img {
+                        width: 100%;
+                    }
                 }
+
             }
+            
         }
     }
 }
