--- a/src/03-shop/03-shop-list.scss
+++ b/src/03-shop/03-shop-list.scss
@@ -26,7 +26,7 @@ $card-btn:#28ADA5;
                 padding-top: 80px;
 
                 .r-search-wrap{
-                    padding: 50px 30px 60px 150px;
+                    padding: 50px 30px 60px 60px;
     
                     .r-search-article{
                         display: flex;
@@ -325,7 +325,7 @@ $card-btn:#28ADA5;
         
             .r-shop-list{
                 width: 60%;
-                padding: 80px 150px 0 0 ;
+                padding: 80px 60px 0 0 ;
 
                 .r-banner-wrap{
                     // padding: 30px 0 0 0;
@@ -435,7 +435,6 @@ $card-btn:#28ADA5;
                                 .r-m-card-img-wrap{
                                     width: 100px;
                                     height: 100px;
-                                    border-radius: 8px;
                                     overflow: hidden;
                                     img{
                                         width: 100%;
@@ -447,8 +446,9 @@ $card-btn:#28ADA5;
                                 p{
                                     font-size: 16px;
                                     letter-spacing: .2rem;
-                                    background-color: $main-yellow;
-                                    margin-top: 10px;
+                                    color: #fff;
+                                    background-color: #000;
+                                    line-height: 20px;
                                 }
                             }
                             
@@ -597,6 +597,7 @@ $card-btn:#28ADA5;
                             flex-direction: column;
                             transition: 1s;
                             .r-card-img-wrap{
+                                display: flex;
                                 height: 10%;
                                 padding: 3px;
                                 border-bottom: 3px solid #333;
@@ -608,7 +609,15 @@ $card-btn:#28ADA5;
                                     object-fit: cover;
                                     object-position: 0% 50%;
                                 }
-                                
+                                span{
+                                    font-size: 20px;
+                                    width: 10%;
+                                    color: #fff;
+                                    background-color: #000;
+                                    text-align: center;
+                                    writing-mode:vertical-lr;
+                                    letter-spacing: .8rem;
+                                }
                                 
                             }
                             .r-card-body{
