--- a/src/03-shop/styles/03-shop-list.scss
+++ b/src/03-shop/styles/03-shop-list.scss
@@ -304,7 +304,7 @@ $card-btn:#28ADA5;
     
             .r-wave{
                 width: 15%;
-                background: url('../../public/03-shop-img/wave-1920px.png')  0 0 ;
+                background: url('./../../../public/03-shop-img/shop-wave-1920px.png')  0 0 ;
                 left: 0;
                 top: 0;
                 size: 100% 100%;
