--- a/src/05-member/style/UserProfile.scss
+++ b/src/05-member/style/UserProfile.scss
@@ -1,5 +1,5 @@
-$s-footer-height: 150px;
-$s-padding-top: 150px;
+$s-footer-height: 120px;
+$s-padding-top: 100px;
 
 .s-body-profile {
   display: flex;
@@ -27,28 +27,50 @@ $s-padding-top: 150px;
 
     .navagator {
       background-color: #fad249;
-      width: 20%;
+      width: 25%;
       padding-top: $s-padding-top;
       display: flex;
-      justify-content: center;
+      justify-content: right;
 
-      border: 1px solid blue;
+      border: 1px solid red;
 
       .list {
         h4 {
-          font-size: 18px;
+          font-size: 16px;
+          padding: 0 50px;
+          margin: 10px 0;
+
+          // border: 1px solid red;
         }
 
         .category {
           display: flex;
+          align-items: center;
+          padding: 5px 50px;
+          margin: 5px;
+
+          // background-color: #FFF6E2;
+          // border-radius: 8px;
+
+          // border: 1px solid blue;
+
           img {
-            width: 50px;
+            width: 30px;
+            object-fit: cover;
+            // border: 1px solid blue;
           }
 
           .category-name {
-            font-size: 24px;
+            font-size: 20px;
             font-weight: 900;
+            margin-left: 9px;
+
+            // border: 1px solid green;
           }
+        }
+
+        .logout {
+          margin-top: 80px;
         }
       }
     }
@@ -56,7 +78,92 @@ $s-padding-top: 150px;
     .main-content {
       padding-top: $s-padding-top;
       border: 1px solid gray;
-      width: 80%;
+      width: 75%;
+      display: flex;
+      flex-direction: column;
+      // padding: 20px;
+      margin: 0 8%;
+
+      border: 1px solid red;
+
+      h2 {
+        font-size: 30px;
+        margin-bottom: 70px;
+      }
+
+      .profile-card {
+        display: flex;
+        flex-direction: column;
+        background-color: #ffebbd;
+        padding: 30px;
+        margin-bottom: 30px;
+        height: 60%;
+
+        border: 1px solid blue;
+
+        .profile-top {
+          display: flex;
+          justify-content: space-evenly;
+          position: relative;
+          margin-bottom: 20px;
+
+          .profile-photo {
+            border: 1px solid red;
+            border-radius: 50%;
+            width: 130px;
+            height: 130px;
+            background-color: #c4c4c4;
+            box-shadow: 0px 5px 5px rgba(206, 71, 67, 0.25);
+
+            overflow: hidden;
+            position: absolute;
+            top: -60px;
+            left: 50px;
+
+            img {
+              width: 100%;
+              object-fit: cover;
+              object-position: center;
+            }
+          }
+
+          .username {
+            font-size: 28px;
+            font-weight: 700;
+            // padding-left: 170px;
+          }
+
+          .user-edit {
+          }
+        }
+
+        .profile-detail {
+          background-color: #fff6e2;
+          // height: 300px;
+          border-radius: 10px;
+          padding: 40px;
+
+          .item {
+            h4 {
+              font-size: 20px;
+            }
+
+            p {
+              font-size: 16px;
+              // margin-bottom: 2px;
+            }
+          }
+        }
+      }
+
+      .remove-account {
+        h3 {
+          font-size: 16px;
+        }
+
+        .removeBtn {
+        }
+      }
     }
 
     .container-base-right {
