cancel width 390px

--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -60,7 +60,7 @@ input {
             display: none;
             margin-right: 10px;
             img {
-                height: 20px;                
+                height: 20px;             
             }
         }
         .y-menu-icon {
@@ -98,7 +98,7 @@ input {
 }
 
 .y-btn-wrap-closed {  
-    min-width: 390px;
+    // min-width: 390px;
     .y-menu-border {
         width: 36px;
         display: flex;
