--- a/src/05-member/style/UserProfile.scss
+++ b/src/05-member/style/UserProfile.scss
@@ -5,6 +5,7 @@ $s-padding-top: 100px;
   display: flex;
   flex-direction: column;
   max-height: 100vh;
+  overflow-x: hidden;
 
   //   border: 1px solid red;
 
@@ -12,14 +13,14 @@ $s-padding-top: 100px;
     height: calc(100vh - $s-footer-height);
     display: flex;
 
-    border: 1px solid black;
+    // border: 1px solid black;
 
     .container-base-left {
       background-color: #fad249;
       width: 300px;
       height: 100%;
       padding-top: $s-padding-top;
-      border: 1px solid green;
+      // border: 1px solid green;
       //   position: absolute;
       //   top: 0;
       //   left: 0;
@@ -28,11 +29,15 @@ $s-padding-top: 100px;
     .navagator {
       background-color: #fad249;
       width: 25%;
+      // height: 100%;
       padding-top: $s-padding-top;
       display: flex;
       justify-content: right;
+      position: fixed;
+      transition: 0.5s;
+      overflow: hidden;
 
-      border: 1px solid red;
+      // border: 1px solid red;
 
       .list {
         h4 {
@@ -77,17 +82,17 @@ $s-padding-top: 100px;
 
     .main-content {
       padding-top: $s-padding-top;
-      border: 1px solid gray;
       width: 75%;
       display: flex;
       flex-direction: column;
       // padding: 20px;
       margin: 0 8%;
 
-      border: 1px solid red;
+      // border: 1px solid red;
 
       h2 {
         font-size: 30px;
+        font-weight: 700;
         margin-bottom: 70px;
       }
 
@@ -99,16 +104,16 @@ $s-padding-top: 100px;
         margin-bottom: 30px;
         height: 60%;
 
-        border: 1px solid blue;
+        // border: 1px solid blue;
 
         .profile-top {
           display: flex;
-          justify-content: space-evenly;
+          // justify-content: space-between;
           position: relative;
           margin-bottom: 20px;
 
           .profile-photo {
-            border: 1px solid red;
+            // border: 1px solid red;
             border-radius: 50%;
             width: 130px;
             height: 130px;
@@ -130,22 +135,37 @@ $s-padding-top: 100px;
           .username {
             font-size: 28px;
             font-weight: 700;
-            // padding-left: 170px;
+            padding-left: 200px;
           }
 
           .user-edit {
+            height: 42px;
+            width: 196px;
+            font-size: 20px;
+            border-radius: 8px;
+            font-weight: 900;
+            margin-left: 200px;
+            border: 3px solid #2b325c;
+            color: #534e48;
+            font-weight: 900;
+            position: absolute;
+            right: 0;
+            // margin: 10px;
           }
         }
 
         .profile-detail {
           background-color: #fff6e2;
-          // height: 300px;
+          height: 400px;
           border-radius: 10px;
-          padding: 40px;
+          // padding: 40px;
 
           .item {
+            padding: 5px;
+            // display: flex;
             h4 {
               font-size: 20px;
+              // border: 1px solid red;
             }
 
             p {
@@ -157,11 +177,45 @@ $s-padding-top: 100px;
       }
 
       .remove-account {
-        h3 {
-          font-size: 16px;
+        display: flex;
+        justify-content: space-between;
+        position: relative;
+        // height: 100%;
+
+        // border: 1px solid red;
+
+        .remove-section {
+          h3 {
+            font-size: 24px;
+            font-weight: 700;
+            margin: 25px 0;
+          }
+
+          .removeBtn {
+            height: 42px;
+            width: 196px;
+            font-size: 20px;
+            border-radius: 8px;
+            font-weight: 900;
+            background-color: #dd5555;
+            border: 3px solid #2b325c;
+            color: #ffffff;
+          }
         }
 
-        .removeBtn {
+        .decorate-store {
+          max-width: 500px;
+          min-width: 300px;
+          // min-width: 30%;
+          position: absolute;
+          margin-right: 40px;
+          bottom: -40px;
+          right: 0;
+
+          img {
+            max-width: 100%;
+            object-fit: cover;
+          }
         }
       }
     }
@@ -172,13 +226,13 @@ $s-padding-top: 100px;
       display: flex;
       justify-content: center;
 
-      border: 1px solid pink;
+      // border: 1px solid pink;
     }
   }
 
   .footer {
     height: $s-footer-height;
-    border: 1px solid green;
+    // border: 1px solid green;
     bottom: 0;
     position: fixed;
     width: 100%;
