--- a/src/05-member/style/UserProfile.scss
+++ b/src/05-member/style/UserProfile.scss
@@ -6,235 +6,150 @@ $s-padding-top: 100px;
   flex-direction: column;
   max-height: 100vh;
   overflow-x: hidden;
-
-  //   border: 1px solid red;
+  // background-color: red;
 
   .container {
     height: calc(100vh - $s-footer-height);
     display: flex;
 
-    // border: 1px solid black;
-
-    .container-base-left {
-      background-color: #fad249;
-      width: 300px;
+    .navigation {
+      //   position: fixed;
+      width: 600px;
       height: 100%;
-      padding-top: $s-padding-top;
-      // border: 1px solid green;
-      //   position: absolute;
-      //   top: 0;
-      //   left: 0;
-    }
-
-    .navagator {
-      background-color: #fad249;
-      width: 25%;
-      // height: 100%;
-      padding-top: $s-padding-top;
-      display: flex;
-      justify-content: right;
-      position: fixed;
+      background: #fad249;
       transition: 0.5s;
       overflow: hidden;
+      padding-top: $s-padding-top;
 
-      // border: 1px solid red;
+      ul {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
 
-      .list {
-        h4 {
-          font-size: 16px;
-          padding: 0 50px;
-          margin: 10px 0;
+        li {
+          width: 35%;
+          list-style: none;
 
-          // border: 1px solid red;
-        }
-
-        .category {
-          display: flex;
-          align-items: center;
-          padding: 5px 50px;
-          margin: 5px;
-
-          // background-color: #FFF6E2;
-          // border-radius: 8px;
-
-          // border: 1px solid blue;
-
-          img {
-            width: 30px;
-            object-fit: cover;
-            // border: 1px solid blue;
+          h4 {
+            margin: 10px 0;
           }
 
-          .category-name {
-            font-size: 20px;
-            font-weight: 900;
-            margin-left: 9px;
+          a {
+            display: block;
+            width: 100%;
+            display: flex;
+            text-decoration: none;
+            color: #534e48;
 
-            // border: 1px solid green;
+            .icon {
+              display: block;
+              min-width: 50px;
+              height: 60px;
+              line-height: 60px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              //   border: 1px solid green;
+
+              img {
+                // width: px;
+                width: 60%;
+                height: 60%;
+                object-fit: cover;
+
+                // border: 1px solid red;
+              }
+            }
+
+            .title {
+              display: block;
+              padding: 0 10px;
+              height: 60px;
+              line-height: 60px;
+              text-align: start;
+              white-space: nowrap;
+              font-size: 20px;
+              font-weight: 900;
+
+              //   border: 1px solid blue;
+            }
+          }
+
+          a:hover {
+            background: #fff6e2;
+            border-radius: 8px;
           }
         }
+      }
+    }
 
-        .logout {
-          margin-top: 80px;
+    @media (max-width: 991px) {
+      .navigation {
+        //   position: fixed;
+        width: 50px;
+        height: 100%;
+        background: #fad249;
+        transition: 0.5s;
+        overflow: hidden;
+
+        ul {
+          width: 100%;
+          list-style: none;
         }
+      }
+
+      .navigation.active {
+        left: 0px;
+        width: 100%;
+      }
+    }
+
+    @media (max-width: 991px) {
+      .toggle {
+        position: absolute;
+        bottom: 0;
+        top: 0;
+        width: 60px;
+        height: 60px;
+        background: #330748;
+        cursor: pointer;
+        transform: scale(0.5);
+        transition: 0.5s;
+      }
+
+      .toggle:before {
+        content: '\f0c9';
+        font-family: 'FontAwesome';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        line-height: 60px;
+        text-align: center;
+        font-size: 24px;
+        color: #fff;
+      }
+
+      .toggle.active {
+        background: #fff6e2;
+        transform: scale(1);
+        transition: 0.5s;
+      }
+
+      .toggle.active:before {
+        content: '\f00d';
+        font-family: 'FontAwesome';
       }
     }
 
     .main-content {
-      padding-top: $s-padding-top;
-      width: 75%;
-      display: flex;
-      flex-direction: column;
-      // padding: 20px;
-      margin: 0 8%;
-
-      // border: 1px solid red;
-
-      h2 {
-        font-size: 30px;
-        font-weight: 700;
-        margin-bottom: 70px;
-      }
-
-      .profile-card {
-        display: flex;
-        flex-direction: column;
-        background-color: #ffebbd;
-        padding: 30px;
-        margin-bottom: 30px;
-        height: 60%;
-
-        // border: 1px solid blue;
-
-        .profile-top {
-          display: flex;
-          // justify-content: space-between;
-          position: relative;
-          margin-bottom: 20px;
-
-          .profile-photo {
-            // border: 1px solid red;
-            border-radius: 50%;
-            width: 130px;
-            height: 130px;
-            background-color: #c4c4c4;
-            box-shadow: 0px 5px 5px rgba(206, 71, 67, 0.25);
-
-            overflow: hidden;
-            position: absolute;
-            top: -60px;
-            left: 50px;
-
-            img {
-              width: 100%;
-              object-fit: cover;
-              object-position: center;
-            }
-          }
-
-          .username {
-            font-size: 28px;
-            font-weight: 700;
-            padding-left: 200px;
-          }
-
-          .user-edit {
-            height: 42px;
-            width: 196px;
-            font-size: 20px;
-            border-radius: 8px;
-            font-weight: 900;
-            margin-left: 200px;
-            border: 3px solid #2b325c;
-            color: #534e48;
-            font-weight: 900;
-            position: absolute;
-            right: 0;
-            // margin: 10px;
-          }
-        }
-
-        .profile-detail {
-          background-color: #fff6e2;
-          height: 400px;
-          border-radius: 10px;
-          // padding: 40px;
-
-          .item {
-            padding: 5px;
-            // display: flex;
-            h4 {
-              font-size: 20px;
-              // border: 1px solid red;
-            }
-
-            p {
-              font-size: 16px;
-              // margin-bottom: 2px;
-            }
-          }
-        }
-      }
-
-      .remove-account {
-        display: flex;
-        justify-content: space-between;
-        position: relative;
-        // height: 100%;
-
-        // border: 1px solid red;
-
-        .remove-section {
-          h3 {
-            font-size: 24px;
-            font-weight: 700;
-            margin: 25px 0;
-          }
-
-          .removeBtn {
-            height: 42px;
-            width: 196px;
-            font-size: 20px;
-            border-radius: 8px;
-            font-weight: 900;
-            background-color: #dd5555;
-            border: 3px solid #2b325c;
-            color: #ffffff;
-          }
-        }
-
-        .decorate-store {
-          max-width: 500px;
-          min-width: 300px;
-          // min-width: 30%;
-          position: absolute;
-          margin-right: 40px;
-          bottom: -40px;
-          right: 0;
-
-          img {
-            max-width: 100%;
-            object-fit: cover;
-          }
-        }
-      }
-    }
-
-    .container-base-right {
-      padding-top: $s-padding-top;
-      width: 300px;
-      display: flex;
-      justify-content: center;
-
-      // border: 1px solid pink;
     }
   }
 
   .footer {
     height: $s-footer-height;
-    // border: 1px solid green;
     bottom: 0;
     position: fixed;
     width: 100%;
+    background-color: #2b325c;
   }
 }
