--- a/src/03-shop/styles/03-shop-list.scss
+++ b/src/03-shop/styles/03-shop-list.scss
@@ -421,7 +421,9 @@ $card-btn:#28ADA5;
                 .r-m-card-wrap{
                     display: flex;
                     overflow-x: scroll;
-                    padding-top: 30px;
+                    padding: 30px 0;
+
+                    
                     .r-m-col{
                         width: 33.333333%;
                         padding-right: 5px;
@@ -581,6 +583,25 @@ $card-btn:#28ADA5;
                             }
                         }
                     }
+                }
+                .r-m-card-wrap::-webkit-scrollbar-track
+                {
+                    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+                    border-radius: 10px;
+                    background-color: #F5F5F5;
+                }
+
+                .r-m-card-wrap::-webkit-scrollbar
+                {
+                    width: 12px;
+                    background-color: #F5F5F5;
+                }
+
+                .r-m-card-wrap::-webkit-scrollbar-thumb
+                {
+                    border-radius: 10px;
+                    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+                    background-color: rgb(182, 182, 182);
                 }
                 .r-card-wrap{
                     padding-top: 60px;
