--- a/src/00-homepage/styles/Homepage.scss
+++ b/src/00-homepage/styles/Homepage.scss
@@ -40,95 +40,30 @@ $border-radius-button: 8px;
     width: 100%;
 }
 
-.y-section-nav {
-    position: fixed;
-    z-index: 999;
-    top: 0;
-    height: 50px;
-    padding: 0 20px;
-    // overflow: hidden;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    .y-logo-wrap {
-        width: 110px;
-        // height: 30px;
-        background: {
-            // color: $main-text;
-        }
-    }
-
-    .y-nav-right {
-
-        display: flex;
-        // width: 100px;
-        // max-width: 200px;
-        justify-content: flex-start;
-        align-items: center;
-
-        .y-icon-round {
-            width: 30px;
-            aspect-ratio: 1/1;
-            border-radius: 50%;
-            overflow: hidden;
-            border: $border-sm;
-            margin-right: 6px;
-            background: {
-                color: white;
-            }
-            
-            .y-cart-icon {
-                margin-right: 20px;
-                img {
-                    width: 100%;
-                    object-fit: cover;
-                }
-            }
-        }
-    }
-}
-
-@media (min-width:391px) {
-    .y-section-nav {
-        height: 90px;
-        padding: 0 40px;
-    
-        .y-logo-wrap {
-            width: 250px;
-            height: 60px;
-            background: {
-                // color: $main-text;
-            }
-        }
-    
-        .y-nav-right {
-            width: 300px;
-            .y-icon-round {
-                width: 55px;
-                border: $border-lg;
-                margin-right: 12px;
-                background: {
-                }
-    
-                .y-cart-icon {
-                    margin-right: 20px;
-                }
-            }
-        }
-        
-    
-    }
-}
-
 .y-section-news {
     overflow: hidden;
     height: 20px;
-    margin-top: 120px;
+    margin-top: 50px;
     background-color: #FBFBF2;
+    border-top: 1px solid $main-text;
+    border-bottom: 1px solid $main-text;
 
     p {
         text-decoration: none;
+        font-size: 14px;
+    }
+    
+}
+
+@media (min-width: 391px) {
+    .y-section-news {
+        height: 18px;
+        margin-top: 90px;
+    
+        p {
+            font-size: 16px;
+            vertical-align: middle;
+        }
     }
 }
 .y-section-carousel {
