--- a/src/03-shop/styles/03-shop-home.scss
+++ b/src/03-shop/styles/03-shop-home.scss
@@ -1,65 +1,173 @@
-$main-orange:#F57D00;
+$main-orange: #f57d00;
+$main-Blue: #113f75;
+$main-yellow: #fad249;
+$cate-btn:#FCE38C;
+$main-text: #5E5E5E;
 
-.r-shop-home-container{
-    // display: flex;
-    background: url(./../../../public/03-shop-img/food_cola_s_01.png) 280px 200px/10% no-repeat,url(./../../../public/03-shop-img/food_ramen_01.png)1700px 700px/8% no-repeat,url(./../../../public/03-shop-img/food_pizza_01.png)650px 80px/15% no-repeat,url(./../../../public/03-shop-img/food_french_fries_01.png)50px 550px/20% no-repeat;
+.r-shop-home-container {
+  // display: flex;
+  background: url(./../../../public/03-shop-img/food_cola_s_01.png) 280px 200px/10%
+      no-repeat,
+    url(./../../../public/03-shop-img/food_ramen_01.png) 1700px 700px/8%
+      no-repeat,
+    url(./../../../public/03-shop-img/food_pizza_01.png) 650px 80px/15%
+      no-repeat,
+    url(./../../../public/03-shop-img/food_french_fries_01.png) 50px 550px/20%
+      no-repeat;
 
-    .r-shop-home-main{
+  .r-shop-home-main {
+    display: flex;
+    .r-shop-home-main-inner {
+      display: flex;
+      align-items: center;
+      .r-shop-home-main-text {
+        width: 40%;
+        margin-left: auto;
+        p {
+          font-size: 48px;
+          font-weight: 700;
+          letter-spacing: 0.2rem;
+          line-height: 3rem;
+          padding-bottom: 20px;
+        }
+        span {
+          font-size: 20px;
+          letter-spacing: 0.1rem;
+        }
+      }
+      .r-shop-home-main-btn {
         display: flex;
-        .r-shop-home-main-inner{
-            display: flex;
-            align-items: center;
-            .r-shop-home-main-text{
-                width: 40%;
-                margin-left: auto;
-                p{
-                    font-size: 48px;
-                    font-weight: 700;
-                    letter-spacing: .2rem;
-                    line-height: 3rem;
-                    padding-bottom: 20px;
-                }
-                span{
-                    font-size: 20px;
-                    letter-spacing: .1rem;
-                }
-            }
-            .r-shop-home-main-btn{
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                height: 60px;
-                text-align: center;
-                background-color: $main-orange;
-                border: 3px solid #000;
-                border-radius: 15px;
-                margin-top: 50px;
-                box-shadow: 10px 5px 0 #333;
-                a{
-                    text-decoration: none;
-                    color: #000;
-                    span{
-                        color: #fff;
-                        letter-spacing: 0.2rem;
-                        font-size: 24px;
-                        font-weight: 700;
-                        padding-left: 8px;
-                    }
-                    i{
-                        font-size: 24px;
-                        color: #fff;
-                    }
-    
-                }
-            }
+        justify-content: center;
+        align-items: center;
+        height: 60px;
+        // text-align: center;
+        // background-color: $main-orange;
+        border: 3px solid #000;
+        border-radius: 15px;
+        margin-top: 50px;
+        box-shadow: 10px 5px 0 #333;
+        input {
+          font-size: 20px;
+          border: none;
+          // border: transparent;
+          margin-right: 5px;
+        }
+        input:focus{
+            outline-style: none;
+        }
+        a {
+          text-decoration: none;
+          // color: #000;
+          // span{
+          //     color: #fff;
+          //     letter-spacing: 0.2rem;
+          //     font-size: 24px;
+          //     font-weight: 700;
+          //     padding-left: 8px;
+          // }
+          i {
+            font-size: 24px;
+            color: $main-Blue;
+          }
+        }
+      }
+    }
+    .r-shop-home-main-visual {
+      width: 60%;
+      height: 80vh;
+      background: url('./../../../public/03-shop-img/potato.png') 0 0 no-repeat;
+      margin-top: 120px;
+    }
+  }
+}
+
+.r-wave-section {
+  // position: relative;
+  width: 100%;
+  height: 60px;
+  background-color:$main-yellow;
+  overflow: hidden;
+}
+
+.r-shop-home-carousel {
+  .r-wave-wrap {
+    // position: absolute;
+    top: 40px;
+    width: 100%;
+    height: 60px;
+    background: {
+      image: url('./../../../public/03-shop-img/Wave-1920px-white.png');
+      // repeat: no-repeat;
+      position: 50% 0;
+      size: 1920px 100px;
+    }
+    animation: animate 3.5s linear infinite;
+    z-index: 100;
+    animation-delay: 0.3s;
+
+    @keyframes animate {
+      0% {
+        background-position-x: 0px;
+      }
+
+      100% {
+        background-position-x: 1920px;
+      }
+    }
+  }
+  .r-shop-home-carousel-check{
+    display: flex;
+    justify-content: center;
+    padding: 30px 0;
+    background-color: $main-yellow;
+    .r-check-wrap{
+        cursor: pointer;
+
+        input{
+            display: none;
+            background-color: transparent;
             
         }
-        .r-shop-home-main-visual{
-            width: 60%;
-            height: 100vh;
-            background: url('./../../../public/03-shop-img/potato.png') 0 0 no-repeat;
-            margin-top: 120px;
+        input:checked + span{
+            background-color: $cate-btn;
+        }
+        span{
+            width: 150px;
+            height: 50px;
+            font-size: 18px;
+            font-weight: 700;
+            color: $main-text;
+            border-radius: 30px;
+            display: inline-flex;
+            justify-content: center;
+            align-items: center;
+            // transition: .3s;
+            border: 1px solid $cate-btn;
+            margin-right: 10px;
+        }
+
+        .r-check-icon{
+            display: inline-block;
+            height:40px;
+            img{
+                height: 100%;
+            }
         }
     }
-    
+  }
+  .r-shop-slider {
+    height: 80vh;
+    background-color: $main-yellow;
+    .r-shop-slider-train1{
+        display: flex;
+        justify-content: center;
+    }
+    .r-shop-slider-img-wrap{
+        width: 25%;
+
+        img{
+            width: 100%;
+        }
+    }
+  }
 }
