organize userprofile pages

--- a/src/05-member/style/SignUp.scss
+++ b/src/05-member/style/SignUp.scss
@@ -136,7 +136,7 @@ $s-main-b: #113f75;
           input[type='submit'] {
             /* border: none; */
             /* color: #fff; */
-            font-weight: 600;
+            font-weight: 600p;
             width: 100%;
             cursor: pointer;
             border-radius: 8px;
