--- a/src/03-shop/styles/03-shop-list.scss
+++ b/src/03-shop/styles/03-shop-list.scss
@@ -594,6 +594,7 @@ $card-btn:#28ADA5;
                 .r-m-card-wrap::-webkit-scrollbar
                 {
                     width: 12px;
+                    height: 8px;
                     background-color: #F5F5F5;
                 }
 
