--- a/src/02-forum/styles/Recommendation.scss
+++ b/src/02-forum/styles/Recommendation.scss
@@ -31,7 +31,8 @@ $p-m:10px;
         font-size: $h5;
         margin-right: 20px;
     }
-    .p-recomText{       
+    .p-recomText{  
+             margin-top: 25px;
         h3{
             color: $main-blue;
             font-size: $h3;
